feat: add update RTP gacha machine and update swagger
